# JD-Scanner

./: README.md  main.py  pyproject.toml
src/: __init__.py  chain.py  config_manager.py  email_sender.py  github_analyzer.py  lang_prompt.py  lang_template.py  main_ui.py  settings_ui.py  user_manager.py
