[project]
name = "jd-scanner"
version = "0.0.2"
description = "test-version with ai prompt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "customtkinter>=5.2.0",
    "discord-py>=2.5.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "pip>=25.1.1",
    "python-dotenv>=1.1.0",
]
